--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,29 @@ services:
     web:
         depends_on:
             - php
+            - auth
         restart: always
         image: nginx:latest
         ports:
-            - "8080:80"
+            - "8888:80"
         volumes:
             - ./src:/src
             - ./utils/site.conf:/etc/nginx/conf.d/default.conf
         networks:
-            - nodestar-server-bridge
+            - server-bridge
+            - auth-bridge
     php:
         depends_on:
             - db
+            - auth
         restart: always
         build: .
         volumes:
             - ./src:/src
         networks:
-            - nodestar-server-bridge
-            - nodestar-db-bridge
+            - server-bridge
+            - db-bridge
+            - auth-bridge
     db:
         image: mysql:latest
         volumes:
@@ -34,12 +38,26 @@ services:
             MYSQL_USER: nodestar
             MYSQL_PASSWORD: nodestar
         networks:
-            - nodestar-db-bridge
+            - db-bridge
+    auth:
+        image: jboss/keycloak
+        restart: always
+        ports:
+            - "8080:8080"
+        environment:
+            KEYCLOAK_USER: root
+            KEYCLOAK_PASSWORD: abcd1234
+        networks:
+            - auth-bridge
+
 
 
 networks:
-    nodestar-server-bridge:
+    server-bridge:
         driver: bridge
 
-    nodestar-db-bridge:
+    db-bridge:
+        driver: bridge
+
+    auth-bridge:
         driver: bridge
