--- a/utils/site.conf
+++ b/utils/site.conf
@@ -6,13 +6,26 @@ server {
     access_log /var/log/nginx/access.log;
     root /src;
 
+    location / {
+        try_files $uri /index.html;
+    }
+
+    location ~* \.js$ {
+        add_header Cache-Control no-cache;
+    }
+
+
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files $uri /server$uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ /auth/.* {
+        proxy_pass http://auth:8080$uri;
     }
 }
