--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,5 +4,4 @@ FROM nubs/composer-build:latest
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
 RUN composer global require phpunit/phpunit:*
-
-CMD ["phpunit", "/tests/"]
+RUN composer global require phpunit/dbunit:*
