Made get_node actually get and read a file that describes the node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
         build: .
         volumes:
             - ./src:/src
+            - ./templates:/templates
         networks:
             - server-bridge
             - db-bridge
