--- a/utils/site.conf
+++ b/utils/site.conf
@@ -21,6 +21,12 @@ server {
     }
 
     location ~ /auth/.* {
+        proxy_http_version 1.1; # this is essential for chunked responses to work
+        proxy_buffering    off;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Scheme $scheme;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   Host $http_host;
         proxy_pass http://auth:8080$uri;
     }
 }
