#143580523 - As a normal user, I would like to logout of the application when I am done.

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,8 +1,14 @@
 {
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/xweskingx/oauth2-keycloak"
+        }
+    ],
     "require-dev": {
         "giorgiosironi/eris": "dev-master",
         "phpunit/phpunit": "^6.0",
         "phpunit/dbunit": "^3.0",
-        "stevenmaguire/oauth2-keycloak": "^2.0"
+        "stevenmaguire/oauth2-keycloak": "dev-master"
     }
 }
